[package]
name = "mtag-tui"
description = "TUI to turn audio files into an album"
repository = "https://github.com/ethanuppal/mtag"
authors = ["Ethan Uppal"]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
toml = "0.9.5"
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
snafu = "0.8.6"
ratatui = "0.29.0"
ratatui-explorer = "0.2.1"

[[bin]]
name = "mtag"
path = "src/main.rs"
